# 3D-Slicer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SuzanneBinary.stl  dev-tools.cmake  makefile
demo/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
src/: CMakeLists.txt  Camera.cpp  Camera.h  Editor.cpp  Editor.h  FileLoader.cpp  FileLoader.h  Grid.cpp  Grid.h  MyImgui.cpp  MyImgui.h  Object.cpp  Object.h  OpenGl.cpp  OpenGl.hpp  Shaders.cpp  Shaders.h  Slicing.cpp  Slicing.h  Support.cpp  Support.h  Window.cpp  Window.hpp
